/*
 * Copyright 2018 Loopring Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package org.loopring.lightcone.core.data;

import "common.proto";

enum XMatchingFailure {
    NO_ERROR = 0;
    ORDERS_NOT_TRADABLE = 1;
    INCOME_TOO_SMALL = 2;
    MAKER_COMPLETELY_FILLED = 3;
    TAKER_COMPLETELY_FILLED = 4;
    INVALID_MAKER_ORDER = 5;
    INVALID_TAKER_ORDER = 6;
}


// For ABC/XYZ market, ABC is secondary, XYZ is primary

message MarketMetadata {
    int32 numBuys = 1;
    int32 numSells = 2;
    int32 numHiddenBuys = 3;
    int32 numHiddenSells = 4;
    double bestBuyPrice = 5;
    double bestSellPrice = 6;
    double lastPrice = 7;
    bool isLastTakerSell = 8;
}



message XOrderbook {
    message XItem {
        string price = 1;
        string amount = 2;
        string total = 3;
    }
    repeated XItem sells = 1;
    repeated XItem buys = 2;
}

message XOrderbookConfig {
    int32 levels = 1;
    int32 priceDecimals = 2;
    int32 precisionForAmount = 3;
    int32 precisionForTotal = 4;
}

message XOrderbookUpdate {
    message XSlot {
        int64 slot = 1;
        double amount = 2;
        double total = 3;
    }
    repeated XSlot sells = 1;
    repeated XSlot buys = 2;
}

message XTokenMetadata {
    string address = 1;
    int32 decimals = 2;
    double burnRate = 3;
    double currentPrice = 4;
}



